# reviews_kaz_classification

./: .gitignore  .gitingore  README.md  config.py  data.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
src/: data_utils.py  model_utils.py  modeling.ipynb  train_utils.py
